--- a/TargetOffers/TargetOffers.vcxproj.filters
+++ b/TargetOffers/TargetOffers.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="head.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Singleton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="head.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Singleton.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
